@@ -11,6 +11,18 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V01-00-13
+2017-12-04 Mikhail S. Dubrovin
+- adjust interaction between image to make it convenient
+- modified:
+   iv
+   GUViewAxesDL.py
+   GUViewGraph.py
+   GUViewHist.py
+   GUViewImageWithShapes.py
+   IVMain.py
+   QWSpectrum.py
+
 Tag: V01-00-12
 2017-10-26 Mikhail S. Dubrovin
 - update keyboard examples for major methods in GUView and GUViewImage
@@ -19,7 +31,6 @@ Tag: V01-00-12
   GUViewAxes.py
   GUViewFW.py
   GUViewImage.py
-
 
 Tag: V01-00-11
 2017-10-20 Mikhail S. Dubrovin
